# gamefriend

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GAMEFRIEND_STATUS.md  Makefile  README.md  gamefriend.db  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  user-flow.txt
custom/path/: guide.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/games/: route.ts
frontend/src/app/api/guides/import/: route.ts
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/game/: GameSelector.tsx
frontend/src/types/: chat.ts  game.ts
gamefriend/: __init__.py  __main__.py  chat_session.py  database.py  embeddings_manager.py  guide_manager.py  interfaces.py  main.py  models.py
gamefriend/api/: __init__.py  chat.py
gamefriend/chat/: __init__.py  companion.py  mistral_client.py  retriever.py
gamefriend/cli/: __init__.py  generate_embeddings.py
gamefriend/data/embeddings/: soul-blazer_embeddings.json
gamefriend/data/progress/: soul-blazer_progress.json
gamefriend/scraper/: __init__.py
guides/snes/the-legend-of-zelda-a-link-to-the-past/: guide_17687.md
tests/: conftest.py  test_api.py  test_chat.py  test_chat_session.py  test_companion.py  test_embeddings_manager.py  test_guide_manager.py  test_guide_manager_embeddings.py  test_interfaces.py  test_scraper.py
